<resources>

    <!-- General -->
    <string name="app_name">BTOFindr</string>
    <string name="splashscreen">Splashscreen</string>
    <string name="image">Image</string>

    <!-- Title -->
    <string name="title_search">SEARCH</string>
    <string name="title_search_results">SEARCH RESULTS</string>
    <string name="title_calculate_payables">CALCULATE PAYABLES</string>
    <string name="title_compare_units">COMPARE UNITS</string>
    <string name="title_compare_units_results">COMPARE UNITS RESULTS</string>
    <string name="title_favourites">FAVOURITES</string>
    <string name="title_history">HISTORY</string>
    <string name="title_recommended">RECOMMENDED</string>
    <string name="title_profile">PROFILE</string>

    <!-- Navigation -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="nav_drawer_titles">
        <item>Home</item>
        <item>Compare Units</item>
        <item>Favourites</item>
        <item>History</item>
        <item>Recommended</item>
        <item>Profile</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_compare</item>
        <item>@drawable/ic_favourites</item>
        <item>@drawable/ic_history</item>
        <item>@drawable/ic_recommended</item>
        <item>@drawable/ic_profile</item>
    </array>

    <!-- Search -->
    <string name="btn_search">SEARCH</string>
    <string name="lbl_town">TOWN</string>
    <string name="lbl_ethic_group">ETHIC GROUP</string>
    <string-array name="spin_ethic">
        <item>Chinese</item>
        <item>Malay</item>
        <item>Indian/Others</item>
    </string-array>
    <string name="lbl_room_type">ROOM TYPE</string>
    <string name="lbl_price_range">PRICE RANGE</string>
    <string name="lbl_sort_by">SORT BY</string>
    <string-array name="spin_sort">
        <item name="spin_lbl_price">Price (lowest to highest)</item>
        <item name="spin_lbl_time">Travelling time (fastest to slowest)</item>
    </string-array>

    <!-- Unit -->
    <string name="lbl_chinese">Chinese:</string>
    <string name="lbl_malay">Malay:</string>
    <string name="lbl_others">Indian/Others:</string>

    <!-- Calculate Payables -->
    <string name="lbl_unit_details">Unit Details</string>
    <string name="lbl_unit_number">Unit Number:</string>
    <string name="lbl_unit_type">Unit Type:</string>
    <string name="lbl_price">Price:</string>
    <string name="lbl_payables">Payables</string>
    <string name="lbl_fees_payable">Fees Payable by Cash only</string>
    <string name="lbl_application_fee">Application Fee:</string>
    <string name="lbl_booking_fee">Flat Option Booking Fee:</string>
    <string name="lbl_signing_agreement">Signing of Agreement For Lease</string>
    <string name="lbl_downpayment">Downpayment, Stamp Duty &amp; Legal Fees:</string>
    <string name="lbl_balance">Balance of the purchase price \n (Per month for 20 years):</string>
    <string name="lbl_by_cpf">Payment by CPF</string>
    <string name="lbl_by_cash">Payment by CASH</string>
    <string name="lbl_keys_collection">Collection of keys</string>
    <string name="lbl_stamp_duty">Stamp Duty &amp; Legal Fees:</string>

    <!-- Map/Plan -->
    <string name="btn_view_map_plan">View Maps &amp; Plans</string>
    <string name="view_map_plan_choice">Select a map/plan to view</string>
    <string-array name="map_plan_list">
        <item>Site Plan</item>
        <item>Town Map</item>
        <item>Block Plan</item>
        <item>Unit Distribution</item>
        <item>Typical Floor Plans</item>
        <item>Layout Ideas</item>
        <item>General Specifications</item>
    </string-array>

    <!-- Compare -->
    <string name="lbl_compare_title">SELECT TWO UNITS TO COMPARE</string>
    <string name="btn_compare">COMPARE</string>

    <!-- Favourites -->
    <string name="lbl_no_fav">NO FAVOURITES</string>

    <!-- Profile -->
    <string name="lbl_profile_title">SET UP PROFILE</string>
    <string name="lbl_postal_code">POSTAL CODE</string>
    <string name="lbl_average_income">AVERAGE MONTHLY INCOME</string>
    <string name="lbl_cpf_balance">CURRENT CPF BALANCE</string>
    <string name="lbl_cpf_contribution">MONTHLY CPF CONTRIBUTION</string>
    <string name="lbl_loan_tenure">LOAN TENURE</string>
    <string name="lbl_unittype_sub_title">UNIT TYPES ALERT SUBSCRIPTION</string>
    <string name="btn_save">SAVE</string>

    <!-- Action -->
    <string name="btn_delete">DELETE</string>
    <string name="btn_calculate_payables">CALCULATE PAYABLES</string>
</resources>
