<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream">

    <!-- Styling of a button -->
    <!--<Button-->
    <!--android:id="@+id/"-->
    <!--android:layout_columnWeight="1"-->
    <!--android:layout_height="@dimen/round_button_height"-->
    <!--android:background="@drawable/rounded_button"-->
    <!--android:textColor="@drawable/text_selector"-->
    <!--android:text=""/>-->

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:useDefaultMargins="true"
        android:layout_margin="@dimen/grid_margin"
        android:padding="@dimen/grid_padding"
        android:columnCount="2"
        android:background="@drawable/content_layout">

        <TextView
            android:layout_columnSpan="2"
            android:text="@string/lbl_town"/>

        <GridLayout
            android:id="@+id/gl_town"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:useDefaultMargins="true"
            android:layout_marginBottom="@dimen/grid_spacing"
            android:columnCount="2"/>

        <TextView
            android:layout_columnSpan="2"
            android:text="@string/lbl_ethic_group"/>

        <Spinner
            android:id="@+id/spin_ethic"
            android:layout_columnSpan="2"
            android:layout_marginBottom="@dimen/grid_spacing"
            android:layout_gravity="fill_horizontal"
            android:entries="@array/spin_ethic"/>

        <TextView
            android:layout_columnSpan="2"
            android:text="@string/lbl_room_type"/>

        <GridLayout
            android:id="@+id/gl_room_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:useDefaultMargins="true"
            android:layout_marginBottom="@dimen/grid_spacing"
            android:columnCount="2"/>

        <TextView
            android:layout_columnSpan="2"
            android:text="@string/lbl_price_range"/>

        <TextView
            android:id="@+id/tv_price_range"
            android:layout_marginBottom="@dimen/grid_spacing"
            android:layout_columnSpan="2"/>

        <Button
            android:id="@+id/btn_search"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:padding="16dp"
            android:text="@string/btn_search"
            android:textSize="18dp"
            android:theme="@style/AppTheme.Button"/>
    </GridLayout>

</RelativeLayout>
